--- a/content/release-notes/2023-06-08-console.md
+++ b/content/release-notes/2023-06-08-console.md
@@ -4,9 +4,10 @@ label: 'Console'
 
 ### What's new
 
-- A **Pro Plan Cost Estimation** tool has been introduced for Free Tier users. This tool, which calculates an estimate of the Pro Plan costs based on your current project usage, can help answer the question, "What would be my monthly cost to date if I upgraded to the [Neon Pro plan](/docs/introduction/pro-plan)?" To use this tool, navigate to the **Billing** page from the sidebar of the Neon Console and select **Estimate costs**.
+- Code examples available from the **Connect Details** widget on the Neon **Dashboard** now include the `-pooler` suffix in the endpoint hostname when the **Pooled connection** tab is selected. The `-pooler` suffix no longer needs to be added to code samples manually.
+- Introduced a **Pro Plan Cost Estimation** tool for Free Tier users. This tool, which estimates Pro Plan costs based on your current project usage, can help answer the question, "What would be my monthly cost to date if I upgraded to the [Neon Pro plan](/docs/introduction/pro-plan) today?" To use this tool, navigate to the **Billing** page from the sidebar of the Neon Console and select **Estimate costs**.
 
-[Pro Plan Cost Estimation tool](/docs/relnotes/billing_page_calculator.png)
+  ![Pro Plan Cost Estimation tool](/docs/relnotes/pro_plan_cost_estimator.png)
 
 ### Bug fixes
 
