--- a/content/release-notes/2023-06-08-console.md
+++ b/content/release-notes/2023-06-08-console.md
@@ -11,4 +11,4 @@ label: 'Console'
 
 ### Bug fixes
 
-- Fixed an issue that caused the date to be displayed in the **Time** field on the **Branch** details page after creating a branch from `main` using the **Time** option.
+- Resolved an issue where the **Time** field on the **Branch** details page incorrectly displayed the date after creating a branch from `main` using the **Time** option. Now, the field correctly displays the time.
