--- a/content/release-notes/2023-03-14-console.md
+++ b/content/release-notes/2023-03-14-console.md
@@ -4,7 +4,7 @@
 - UI: Changed the **User** label on the **Connection Details** widget to **Roles**. Database users are now referred to as **Roles** in Neon.
 - UI: Added descriptive text and a documentation link to the **Integrations** page in the Neon Console.
 - UI: Added support for sharing projects with other Neon users. Project sharing is performed from the **Settings** page in the Neon Console. The project sharing feature is available only to Neon paid plan users, but projects can be shared with any Neon user, including Free Tier users. For instructions, see [Manage projects](/docs/manage/projects).
-- UI: Added an **Upgrade to Pro** option to the Neon Console to enable upgrading from Free Tier to Neon's Pro plan. For information about Neon's paid plans, please refer to [Billing](/docs/introduction/billing).
+- UI: Added an **Upgrade to Pro** option to the Neon Console to enable upgrading from Free Tier to Neon's Pro plan. For information about Neon's paid plans, please refer to [Neon plans](/docs/introduction/plans).
 
 ### Bug Fixes
 
