--- a/content/release-notes/2023-07-14-console.md
+++ b/content/release-notes/2023-07-14-console.md
@@ -4,4 +4,6 @@ label: 'Console'
 
 ### What's new
 
+**Dark mode**
+
 The Neon Console now supports **Dark** mode. To enable dark mode, click your account in the bottom left corner of the Neon Console, and select **Theme**. You can choose from **System**, **Light**, or **Dark** mode.
