--- a/content/release-notes/2023-08-09-console.md
+++ b/content/release-notes/2023-08-09-console.md
@@ -6,7 +6,7 @@ label: 'Console'
 
 **History retention and point-in-time restore**
 
-You can now configure the history retention period for a Neon project. This feature enables [point-in-time restore](/docs/introduction/point-in-time-retore), allowing you to restore data to any time within the retention period. By default, Neon retains a 7-day history of changes for all branches in a Neon project. The supported history retention range is 0 to 7 days for [Neon Free Tier](/docs/introduction/free-tier) users, and 0 to 30 days for [Neon Pro plan](/docs/introduction/pro-plan) users.
+You can now configure the history retention period for a Neon project in the Neon Console. History retention enables [point-in-time restore](/docs/introduction/point-in-time-retore), allowing you to restore data to any point within the retention period. By default, Neon retains a 7-day history of data changes for all branches in a Neon project. The supported history retention range is 0 to 7 days for [Free Tier](/docs/introduction/free-tier) users, and 0 to 30 days for [Pro plan](/docs/introduction/pro-plan) users.
 
 The **History retention** setting is located in the Neon Console under **Settings** > **Storage**.
 ![History retention configuration](/docs/relnotes/history_retention.png)
