Drop What's new and Bug fixes headings

--- a/content/release-notes/2022-07-20-console.md
+++ b/content/release-notes/2022-07-20-console.md
@@ -1,4 +1,4 @@
-### What's new
+### Improvements and fixes
 
 - UI: Added an **Enable pooling** toggle to the project **General setting** page, which permits enabling or disabling connection pooling for a project. For more information about Neon connection pooling support, see [Connection pooling](/docs/get-started-with-neon/connection-pooling/).
 - Control plane: Implemented the usage of several instances for serving the public API and web UI to enable zero-downtime deployments.
