--- a/content/release-notes/2022-08-30-console.md
+++ b/content/release-notes/2022-08-30-console.md
@@ -1,7 +1,4 @@
-### What's new
+### Improvements and fixes
 
 - UI: Added a **Submit Feedback** feedback form to the Neon Console. The form is accessible from the **Help** menu.
-
-### Bug fixes
-
 - UI: Fixed a CORS error for API requests in the Swagger UI. The error occurred when using the 'Try it out' feature.
