--- a/content/release-notes/2022-08-31-console.md
+++ b/content/release-notes/2022-08-31-console.md
@@ -1,8 +1,5 @@
-### What's new
+### Improvements and fixes
 
 - Control Plane: Implemented OAuth backend support and OAuth consent screens, which enable granting OAuth applications permission to create projects on behalf of users. Services interested in OAuth integration with Neon should contact [partnerships@neon.tech](mailto:partnerships@neon.tech).
-
-### Bug fixes
-
 - UI: Fixed the syntax highlighting for Golang snippets.
 - UI: Fixed styles for smaller screens.
