--- a/content/release-notes/2022-09-28-console.md
+++ b/content/release-notes/2022-09-28-console.md
@@ -1,4 +1,4 @@
-### What's new
+### Improvements and fixes
 
 - Integrations: Added `read`, `update`, `delete` project access scopes for OAuth applications.
 - Integrations: Added the ability to select access scopes and projects on the OAuth consent page.
@@ -9,9 +9,6 @@
 - Control Plane: Stopped sending metrics to Grafana Cloud.
 - Control Plane: Removed usage of the obsolete `zenith_ctl` binary.
 - Control Plane: Split the monolithic project object into project, branches, and endpoints in the internal database schema.
-
-### Bug fixes
-
 - UI: Fixed a failure that occurred after receiving an empty response in the SQL Editor.
 - UI: Fixed an issue to ensure that table names are reset when switching between schemas on the **Tables** page in the Neon Console.
 - Control Plane: Fixed a [passwordless auth](/docs/connect/passwordless-connect) issue that occurred when creating a new project using the project selection interface.
