--- a/content/release-notes/2022-10-04-console.md
+++ b/content/release-notes/2022-10-04-console.md
@@ -1,9 +1,6 @@
-### What's new
+### Improvements and fixes
 
 - Integrations: Added OAuth support for Hasura users, enabling seamless authentication with Neon from Hasura Cloud. To learn more about connecting from Hasura Cloud to Neon, see [Connect from Hasura Cloud to Neon](/docs/integrations/hasura).
-
-### Bug fixes
-
 - UI: The Database drop-down menu in the **Connection Details** widget on the Dashboard and in the Neon SQL Editor now permits selecting any created database.
 - Control Plane: The availability checker now waits for the project operations queue to clear before starting.
 - Control Plane: Operations for redo are now selected based on the correct status.
