--- a/content/release-notes/2022-11-04-console.md
+++ b/content/release-notes/2022-11-04-console.md
@@ -1,4 +1,4 @@
-### What's new
+### Improvements and fixes
 
 - UI: Added support for the US East (Ohio), Europe (Frankfurt), and Asia Pacific (Singapore) regions, allowing you to create Neon projects closer to your application servers. For more information about Neon's region support, see [Regions](/docs/conceptual-guides/regions/).
 - UI: Updated Neon's branching capabilities. The following enhancements were introduced:
