--- a/content/release-notes/2022-11-17-console.md
+++ b/content/release-notes/2022-11-17-console.md
@@ -1,4 +1,4 @@
-### What's new
+### Improvements and fixes
 
 - UI: Postgres 15 is now the default version when creating a Neon project.
 - UI: Added support for renaming branches. To rename a branch, select the branch on the **Branches** page in the Neon Console and click **Rename branch**.  
@@ -11,9 +11,6 @@
 - Control Plane: Added the ability to fetch all endpoints for a specified branch to the Neon API v2. Thank you to our Neon community member for the [feature request](https://community.neon.tech/t/api-route-feature-request-suggestion-get-v2-projects-project-id-branches-branch-id-endpoints/246).
 - Control Plane: Added the ability to create endpoints without specifying an instance ID to the Neon API v2.
 - Control Plane: Added the ability to retrieve information about the current user to the Neon API v2. User details such as login, email, and other parameters specified in the OpenAPI specification can now be retrieved.
-
-### Bug fixes
-
 - UI: Fixed an issue that prevented project and endpoint statuses from being updated when making changes.
 - Control Plane: Added a `"Content-Type"` header with an `"application/json"` value to Neon API v2 error responses.
 - Control Plane: Fixed a memory leak that occurred when handling SQL requests.
