--- a/content/release-notes/2022-12-01-console.md
+++ b/content/release-notes/2022-12-01-console.md
@@ -1,4 +1,4 @@
-### What's new
+### Improvements and fixes
 
 - API: Creating branches using the Neon API v1 is now deprecated.
 - API: Added support for cursor pagination when listing operations.
@@ -19,9 +19,6 @@
 - UI: Updated the Neon Free Tier limits. See [Technical Preview Free Tier](/docs/introduction/free-tier/) for details. The new Neon Free Tier limits apply to both new and existing projects, but the previous 10 GB storage limit will be honored for existing projects that currently have more than 3 GB of data.
 - UI: Added a **Delete endpoint** button to the **Endpoints** page.
 - UI: Updated the Neon [passwordless auth](/docs/connect/passwordless-connect/) feature to select an endpoint to connect to instead of a project.
-
-### Bug fixes
-
 - API: Fixed the ordering of operations and projects.
 - API: Corrected the error reported when a duplicate branch name is used.
 - Control Plane: Added handling for ID collisions when creating a branch or endpoint.
