--- a/content/release-notes/2022-12-06-console.md
+++ b/content/release-notes/2022-12-06-console.md
@@ -1,4 +1,4 @@
-### What's new
+### Improvements and fixes
 
 - API: Added request and response body examples to the Neon API v2 specification.
 - API: Disabled deleting or changing the endpoint compute instance associated with a project's root branch.
@@ -15,9 +15,6 @@
 - UI: Updated the **Create branch** page to display the local timezone when selecting the **Time** option during branch creation.
 - UI: Removed branches without endpoints from the branch selector in Neon SQL Editor. To query a branch, the branch must have an associated endpoint through which a connection can be established.
 - UI: Added a **Free tier** widget to the Neon **Dashboard**, which shows how many branches and endpoints you have created and the status of your free tier limits. The widget also shows the data size limit per branch, which is 3GB. For information about Free Tier limits, see [Neon Technical Preview Free Tier](/docs/introduction/free-tier/).
-
-### Bug fixes
-
 - API: Fixed a project duplication issue in the list projects method in the Neon API v1.
 - Control Plane: Improved the reliability of the passwordless auth feature.
 - Control Plane: Fixed an issue that caused an endpoint to be created in a region other than the project's region.
