--- a/content/release-notes/2023-02-02-console.md
+++ b/content/release-notes/2023-02-02-console.md
@@ -1,4 +1,4 @@
-### What's new
+### Improvements and fixes
 
 - API: The response body for projects, branches, and endpoints now exposes a `creation_source` property. Currently, the `creation_source` property identifies the `console` as the creation source in all cases but will eventually identify other sources, such as the Neon API.
 - API: Listing projects with the Neon API now supports cursor-based pagination. Pagination enables limiting the number of responses displayed at one time, which is useful when a response includes a large number of projects. By default, the first 10 projects are returned. You can set the `limit` parameter to request up to 100 projects.
@@ -9,9 +9,6 @@
   - **Operations**, **Databases**, and **Users** pages, previously accessed from the **Settings** page, are now directly accessible from the sidebar.
   - Links to **Community**, **Feedback**, **Docs**, **Release notes**, and **Support**, previously located in a **Help** menu in the navigation bar, were moved to the sidebar for easier access.
   - The Neon account avatar was moved from the top right corner of the console to the sidebar.
-
-### Bug fixes
-
 - API: Fixed a race condition that occurred when creating a project and attempting to fetch information about branch in the same project.
 - Control Plane: Fixed a `cannot execute GRANT in a read-only` error that occurred when a database owner enabled the `default_transaction_read_only` setting, preventing the Control Plane from configuring the compute instance.
 - UI: Fixed the positioning of selection menus in the console to avoid scrolling outside  intended boundaries.
