--- a/content/release-notes/2023-03-08-drivers.md
+++ b/content/release-notes/2023-03-08-drivers.md
@@ -1,4 +1,4 @@
-### What's New
+### Improvements and fixes
 
 - Released a new version of the [Neon serverless driver](https://github.com/neondatabase/serverless) (v0.2.6), which allows you to query data from [Cloudflare Workers](https://workers.cloudflare.com/), [Vercel Edge Functions](https://vercel.com/features/edge-functions), and other environments that support WebSockets. The updated driver offers:
   - Automatic import of the `ws` (WebSocket library) package if required, which makes the driver easier to use on StackBlitz and with Zapatos, for example.
