--- a/content/release-notes/2023-03-15-plans.md
+++ b/content/release-notes/2023-03-15-plans.md
@@ -1,8 +1,4 @@
----
-label: 'Plans'
----
-
-### What's new
+### Improvements and fixes
 
 - In addition to the [Free Tier](/docs/introduction/free-tier), Neon now offers the following paid plans:
   
