--- a/content/release-notes/2023-03-16-console.md
+++ b/content/release-notes/2023-03-16-console.md
@@ -1,4 +1,4 @@
-### What's new
+### Improvements and fixes
 
 - API: Added a `suspend_timeout_seconds` property to the Endpoint API, which specifies the duration of inactivity (in seconds) after which a compute endpoint is automatically suspended.
 - UI: Added support for fractional Compute Units (CU), enabling configuration of compute endpoints with a quarter or half CU. One CU has 1 vCPU and 4 GB of RAM.
