--- a/content/release-notes/2023-03-17-docs.md
+++ b/content/release-notes/2023-03-17-docs.md
@@ -1,4 +1,4 @@
-### What's New
+### Improvements and fixes
 
 - Added a [Billing](/docs/introduction/billing) page describing Neon paid plans, pricing, and related topics.
 - Added instructions for using the [Neon Serverless driver](/docs/serverless/serverless-driver) on Vercel Edge Functions and Cloudflare Workers. The driver is a drop-in replacement for [node-postgres](https://node-postgres.com/) that allows you to query data from environments that support WebSockets but not TCP sockets.
