--- a/content/release-notes/2023-04-03-plans.md
+++ b/content/release-notes/2023-04-03-plans.md
@@ -1,7 +1,3 @@
----
-label: 'Plans'
----
-
-### What's new
+### Improvements and fixes
 
 - Free Tier: The _compute active time_ limit of 100 hours per month for non-primary branches, introduced on February 24, 2023, now applies to all Neon Free Tier projects. The limit was not applied to projects created before February 24 2023 to give users time to adjust their usage or upgrade to a [paid plan](/docs/introduction/plans). For information about Free Tier limits, see [Free Tier](/docs/introduction/free-tier). If you have questions about this change or upgrading to a paid plan, please contact [Sales](https://neon.tech/contact-sales).
