--- a/content/release-notes/2023-04-11-console.md
+++ b/content/release-notes/2023-04-11-console.md
@@ -1,8 +1,4 @@
----
-label: 'Console'
----
-
-### What's new
+### Improvements and fixes
 
 - API: Added `consumption_period_start` and `consumption_period_end` properties to the [Get project details](https://api-docs.neon.tech/reference/getproject) API. These properties provide the date and time when Neon starts and stops measuring usage for the current billing period.
 - Control Plane: Added support for the [pg_stat_statements](https://www.postgresql.org/docs/current/pgstatstatements.html) extension, which provides tracking of plan and execution statistics for SQL statements. For more information about Postgres extensions supported by Neon, see [Postgres extensions](/docs/extensions/pg-extensions/).
