--- a/content/release-notes/2023-04-14-console.md
+++ b/content/release-notes/2023-04-14-console.md
@@ -1,8 +1,4 @@
----
-label: 'Console'
----
-
-### What's new
+### Improvements and fixes
 
 - Control Plane: Added support for the [timescaledb](https://github.com/timescale/timescaledb) extension, which scales Postgres for time-series data. For more information about Postgres extensions supported by Neon, see [Postgres extensions](/docs/extensions/pg-extensions/).
 - UI: Added hover help to the `PRIMARY` branch badge that identifies a branch as the [primary branch](/docs/reference/glossary#primary-branch) for a project. The help message states that the compute endpoint associated with the primary branch remains accessible if you exceed project limits, ensuring uninterrupted access to the data on your primary branch.
