--- a/content/release-notes/2023-04-28-console.md
+++ b/content/release-notes/2023-04-28-console.md
@@ -1,8 +1,4 @@
----
-label: 'Console'
----
-
-### What's new
+### Improvements and fixes
 
 - API: Enabled checking for the Neon API specification to ensure that examples are updated when the specification is modified.
 - API: Added a `history_retention_seconds` property to the [Project](https://api-docs.neon.tech/reference/getproject) response body. Neon retains a 7-day history to support point-in-time restore. History retention will become a configurable parameter in a future release.
