--- a/content/release-notes/2023-04-28-docs.md
+++ b/content/release-notes/2023-04-28-docs.md
@@ -1,4 +1,4 @@
-### What's new
+### Improvements and fixes
 
 - Added a guide for using [Grafbase Edge Resolvers with Neon](/docs/guides/grafbase). The guide describes how to create a GraphQL API using Grafbase and use Edge Resolvers with the [Neon serverless driver](/docs/serverless/serverless-driver) to access your Neon database at the edge.
 - Added a guide for using [WunderGraph with Neon](/docs/guides/wundergraph). WunderGraph is an open-source Backend for Frontend (BFF) framework designed to optimize developer workflows through API composition. The guide describes how you can use WunderGraph with Neon to accelerate application development.
