--- a/content/release-notes/2023-07-06-console.md
+++ b/content/release-notes/2023-07-06-console.md
@@ -1,8 +1,4 @@
----
-label: 'Console'
----
-
-### What's new
+### Improvements and fixes
 
 - UI: Added **Typical use cases** and **Custom** tabs to the **Pro Plan Cost Estimation** tool that is accessible from the **Billing** page on the Neon Free Tier. This tool helps you estimate what your monthly cost would be if you upgraded to the [Neon Pro plan](/docs/introduction/pro-plan).
   - The **Typical uses case** tab provides cost estimates for predefined **Prototype**, **Launch**, and **Scale** use cases.
@@ -12,7 +8,4 @@ label: 'Console'
 - API: Added a `suspend_timeout_seconds` parameter to the  `default_endpoint_settings` object in the [Create project](https://api-docs.neon.tech/reference/createproject) API. This parameter defines the amount of time before the project's default compute endpoint is suspended due to inactivity. The default is 300 seconds (5 minutes).
 - API: Deprecated the `autoscaling_limit_min_cu` and `autoscaling_limit_min_cu` parameters in the [Create project](https://api-docs.neon.tech/reference/createproject) `project` object. You can configure these parameters in the `default_endpoint_settings` object instead when creating a project.
 - Control Plane: Autoscaling minimum and maximum values are now validated to ensure only valid values are permitted.
-
-### Bug fixes
-
 - Invoices from past months did not appear on the **Billing** page for Neon Pro plan accounts.
