--- a/content/release-notes/2023-07-10-drivers.md
+++ b/content/release-notes/2023-07-10-drivers.md
@@ -1,10 +1,4 @@
----
-label: 'Drivers'
----
-
-### What's new
-
-**Faster Postgres queries for Vercel Edge Functions**
+### Faster Postgres queries for Vercel Edge Functions
 
 The [Neon serverless driver](https://neon.tech/docs/serverless/serverless-driver) now supports for SQL queries over HTTP, providing up to a 40% reduction in query latencies from [Vercel Serverless Functions](https://vercel.com/docs/concepts/functions/serverless-functions) and [Edge Functions](https://vercel.com/docs/concepts/functions/edge-functions) for one-shot queries. The enhanced driver brings same-region query response times down to single-digit milliseconds.
 
