--- a/content/release-notes/2023-07-13-console.md
+++ b/content/release-notes/2023-07-13-console.md
@@ -1,11 +1,4 @@
----
-label: 'Console'
----
-
-### What's new
+### Improvements and fixes
 
 - Control Plane: The polling interval for a branch deletion operation was decreased from approximately 20 seconds to 1 second. A branch deletion operation typically takes a few seconds but appeared to take longer due to the polling delay.
-
-### Bug fixes
-
 - UI: Fixed the code example copy button in the **Connection Details** widget, which failed to remain stationary while scrolling.
