--- a/content/release-notes/2022-06-08-console.md
+++ b/content/release-notes/2022-06-08-console.md
@@ -1,11 +1,8 @@
-### What's new
+### Improvements and fixes
 
 - UI: The Neon Technical Preview invite code is now requested only at the first login.
 - UI: Added a cover to password fields to protect passwords from view. Passwords are presented to users after performing actions such as creating a project, creating a user, or resetting a password.
 - API: Changed the `user_id` type from `int64` to `uuid`.
 - API: Implemented a unified JSON error response where possible, in the format of `{ "message": "error text" }`.
 - API: Made `platform`, `region`, and `instance_type` ids optional during new project creation.
-
-### Bug fixes
-
 - Control Plane: Fixed an issue that allowed the `web_access` system role to be modified or deleted, which could affect the functioning of the Neon SQL Editor.
