--- a/content/release-notes/2022-07-11-console.md
+++ b/content/release-notes/2022-07-11-console.md
@@ -1,8 +1,5 @@
-### What's new
+### Improvements and fixes
 
 - Control Plane: Implemented connection pooling support for Neon projects, allowing Neon to support a greater number of connections. For information about enabling connection pooling for a Neon project, see [Connection pooling](/docs/connect/connection-pooling/).
 - API: Added a `pooler_enabled` property to the [project update API call](https://api-docs.neon.tech/reference/updateproject) to indicate whether or not connection pooling is enabled.
-
-### Bug fixes
-
 - API: Fixed several bugs that could cause intermittent 409 responses, which indicate a request conflict with the current state of the target resource.
