--- a/content/release-notes/2022-08-04-console.md
+++ b/content/release-notes/2022-08-04-console.md
@@ -1,4 +1,4 @@
-### What's new
+### Improvements and fixes
 
 - UI: Added validation to ensure that the API key **Name** field is not left blank when creating a new API Key on the **Developer Settings** page. For information about API keys, see [Manage keys](/docs/get-started-with-neon/using-api-keys/).
 - UI: Added a **Create branch** button to the project Dashboard for selected users. To request early access to Neon branching capabilities, send an email to [iwantbranching@neon.tech](mailto:iwantbranching@neon.tech).
