--- a/content/release-notes/2022-08-15-console.md
+++ b/content/release-notes/2022-08-15-console.md
@@ -1,4 +1,4 @@
-### What's new
+### Improvements and fixes
 
 - UI: The Neon SQL Editor now maintains a history of previously executed queries and permits saving queries. For more information about these capabilities, see [Query with Neon's SQL Editor](/docs/get-started-with-neon/query-with-neon-sql-editor/).
 - UI: Added token-based authorization to [Neon's public API](https://api-docs.neon.tech/reference/getting-started-with-neon-api).
@@ -6,8 +6,5 @@
 - UI: Disabled controls that incorrectly remained enabled while the Neon project was in a transitive state.
 - Control Plane: Set `max_replication_write_lag` to `15 MB` to tune the backpressure mechanism and improve PostgresSQL responsiveness under load.
 - Control Plane: Improved the ability to investigate performance issues by collecting and saving more detailed compute node startup time metrics.
-
-### Bug fixes
-
 - UI: Fixed incorrect encoding when switching between code samples in the **Connection Details** widget on the project Dashboard, and added descriptions to connection string examples.
 - UI: Fixed various typos and errors.
