--- a/content/release-notes/2023-02-08-console.md
+++ b/content/release-notes/2023-02-08-console.md
@@ -1,4 +1,4 @@
-### What's new
+### Improvements and fixes
 
 - UI: Updated various UI elements in the Neon Console to rename **Endpoints** to **Compute endpoints**. The term _Endpoint_ was not specific enough to accurately reflect the resource being referred to. A **Compute endpoint** in Neon refers the compute instance that runs Postgres.
 - UI: Added a `PRIMARY` badge to identify the primary branch of a Neon project. The badge is visible on the **Branches** page in the Neon Console and in other UI elements that show a project's branches.
