--- a/content/release-notes/2023-03-22-console.md
+++ b/content/release-notes/2023-03-22-console.md
@@ -1,10 +1,7 @@
-### What's new
+### Improvements and fixes
 
 - API: Updated the `region_id` description in the Project API to include a link to the list of regions supported by Neon.
 - UI: Revised the style of the **Unsubscribe** dialog accessed from the **Billing** page in the Neon Console.
 - UI: Updated the metric units in the **Usage** widget on the Neon **Dashboard**
-
-### Bug fixes
-
 - UI: Fixed an issue that prevented **Usage** widget metrics on the Neon **Dashboard** from displaying data as expected. The API that supports the widget did not provide the required data.
 - UI: Fixed an issue that caused Free Tier usage to be included in metrics data displayed in the **Usage** widget on the Neon **Dashboard** after upgrading to the Neon Pro plan. This issue did not affect billing.
