--- a/content/release-notes/2023-03-31-drivers.md
+++ b/content/release-notes/2023-03-31-drivers.md
@@ -1,7 +1,3 @@
----
-label: 'Drivers'
----
-
-### What's New
+### Improvements and fixes
 
 - Connections from the [Postgres.js](https://github.com/porsager/postgres) client for Node.js and Deno are now supported. Postgres.js recently added [support for Server Name Indication (SNI)](https://github.com/porsager/postgres/commit/498f2aec9fa2abe7da548865abffb148ba438946), which Neon uses to route incoming connections. Postgres.js connections must pass the `ssl: 'require'` option. For more information about how Neon uses SNI, see [How Neon routes connections](/docs/connect/connection-errors#how-neon-routes-connections).
