--- a/content/release-notes/2023-05-29-console.md
+++ b/content/release-notes/2023-05-29-console.md
@@ -1,12 +1,6 @@
----
-label: 'Console'
----
-
-### What's new
+### Improvements and fixes
 
 - Control Plane: The Postgres `max_connections` setting is now set according to your compute size. Previously, the `max_connections` setting was 100. The formula that calculates the `max_connections` setting is `RAM in bytes / 9531392 bytes`. For example, a compute with 12 GB of RAM has a `max_connections` setting of 1351. You can check the `max_connections` setting by running `SHOW max_connections;` from the Neon SQL Editor or from a client connected to Neon. When [Autoscaling](/docs/introduction/autoscaling) is enabled, `max_connections` is calculated based on the minimum compute size in your Autoscaling configuration.
-  
-  
   
   Neon supports up to 10,000 simultaneous connections when using [connection pooling](/docs/connect/connection-pooling).
 - UI: Updated the **Request Downgrade** modal on the **Billing** page for Neon Pro accounts. The button label was changed, the screen height was adjusted, and other stylistic changes were applied.
