--- a/content/release-notes/2023-06-02-console.md
+++ b/content/release-notes/2023-06-02-console.md
@@ -1,7 +1,3 @@
----
-label: 'Console'
----
-
-### What's new
+### Improvements and fixes
 
 - [Connection pooling](/docs/connect/connection-pooling) can now be used in combination with the Neon [Autoscaling](/docs/introduction/autoscaling) feature. Previously, connection pooling was only available with fixed-size computes.
