--- a/content/release-notes/2023-06-08-console.md
+++ b/content/release-notes/2023-06-08-console.md
@@ -1,15 +1,9 @@
----
-label: 'Console'
----
-
-### What's new
+### Improvements and fixes
 
 - The code examples accessible from the **Connect Details** widget on the Neon **Dashboard** now include a `-pooler` suffix in the endpoint hostname when the **Pooled connection** tab is selected. You no longer need to add this suffix manually.
 - Introduced a **Pro Plan Cost Estimation** tool designed to assist Free Tier users. This tool provides an estimated cost for the Pro Plan based on your current project usage. If you've ever wondered, "How much would my monthly cost be if I upgraded to the Neon Pro plan today?", this tool provides the answer. To access it, go to the **Billing** page via the sidebar of the Neon Console and select **Estimate costs**.
 
   ![Pro Plan Cost Estimation tool](/docs/relnotes/pro_plan_cost_estimator.png)
-
-### Bug fixes
 
 - Resolved an issue where the **Time** field on the **Branch** details page incorrectly displayed the date after creating a branch from `main` using the **Time** option. Now, the field correctly displays the time.
 
