--- a/content/release-notes/2023-07-10-console.md
+++ b/content/release-notes/2023-07-10-console.md
@@ -1,12 +1,5 @@
----
-label: 'Console'
----
-
-### What's new
+### Improvements and fixes
 
 - UI: Add keyboard support (**Tab** + **Enter**) for switching  between  **Explain** and **Analyze** tabs in the **SQL Editor**.
-
-### Bug fixes
-
 - UI: Fixed calculations in the **Pro Plan Cost Estimation** tool accessible from the **Billing** page on the Neon Free Tier. The issue resulted in incorrect cost estimates.
 - UI: Fixed an issue in the **SQL Editor** that caused a page reload when switching between **Explain** and **Analyze** tabs.
