--- a/content/release-notes/2023-07-25-console.md
+++ b/content/release-notes/2023-07-25-console.md
@@ -1,10 +1,4 @@
----
-label: 'Console'
----
-
-### What's new
-
-**Faster cold starts in all regions**
+### Faster cold starts in all regions
 
 Neon's _Auto-suspend_ feature scales a compute instance to zero after a period of inactivity. A characteristic of this feature is a "cold start", which occurs when an idle compute is restarted to process requests. Recently, cold-start times have been improved through a variety of enhancements, outlined below:
 
