--- a/content/release-notes/2023-05-30-docs.md
+++ b/content/release-notes/2023-05-30-docs.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Documentation additions
 
 - Added a guide for [connecting from Elixir with Ecto](https://neon.tech/docs/guides/elixir-ecto).
 - Added a guide for [connecting a Python application to Neon using Psycopg](https://neon.tech/docs/guides/python).
