--- a/content/release-notes/2023-06-02-console.md
+++ b/content/release-notes/2023-06-02-console.md
@@ -1,3 +1,3 @@
-### Improvements and fixes
+### Connection pooling support for Autoscaling computes
 
-- [Connection pooling](/docs/connect/connection-pooling) can now be used in combination with the Neon [Autoscaling](/docs/introduction/autoscaling) feature. Previously, connection pooling was only available with fixed-size computes.
+[Connection pooling](/docs/connect/connection-pooling) can now be used in combination with the Neon [Autoscaling](/docs/introduction/autoscaling) feature. Previously, connection pooling was only available with fixed-size computes.
