--- a/content/release-notes/2023-07-06-console.md
+++ b/content/release-notes/2023-07-06-console.md
@@ -1,11 +1,19 @@
-### Improvements and fixes
+## Pro Plan Cost Estimation tool enhancements
 
-- UI: Added **Typical use cases** and **Custom** tabs to the **Pro Plan Cost Estimation** tool that is accessible from the **Billing** page on the Neon Free Tier. This tool helps you estimate what your monthly cost would be if you upgraded to the [Neon Pro plan](/docs/introduction/pro-plan).
-  - The **Typical uses case** tab provides cost estimates for predefined **Prototype**, **Launch**, and **Scale** use cases.
-  - The **Custom** tab allows you to estimate costs based on compute and storage usage values that you provide.
-- Control Plane: The default password encryption method for roles in Neon was changed to `scram-sha-256`.
-- Control Plane: Upgraded PGBouncer to a Bitnami version that does not wait for the Postgres instance to become accessible before starting PgBouncer. Additionally, to optimize compute startup times, the `server_login_retry` setting in PgBouncer's configuration was adjusted to remove any delay between Postgres connection retries.
-- API: Added a `suspend_timeout_seconds` parameter to the  `default_endpoint_settings` object in the [Create project](https://api-docs.neon.tech/reference/createproject) API. This parameter defines the amount of time before the project's default compute endpoint is suspended due to inactivity. The default is 300 seconds (5 minutes).
-- API: Deprecated the `autoscaling_limit_min_cu` and `autoscaling_limit_min_cu` parameters in the [Create project](https://api-docs.neon.tech/reference/createproject) `project` object. You can configure these parameters in the `default_endpoint_settings` object instead when creating a project.
-- Control Plane: Autoscaling minimum and maximum values are now validated to ensure only valid values are permitted.
-- Invoices from past months did not appear on the **Billing** page for Neon Pro plan accounts.
+**Typical use cases** and **Custom** tabs were added to the **Pro Plan Cost Estimation** tool that is accessible from the **Billing** page on the Neon Free Tier. This tool helps you estimate what your monthly cost would be if you upgraded to the [Neon Pro plan](/docs/introduction/pro-plan).
+
+- The **Typical uses case** tab provides cost estimates for predefined **Prototype**, **Launch**, and **Scale** use cases.
+- The **Custom** tab allows you to estimate costs based on compute and storage usage values that you provide.
+
+<details>
+<summary>Improvements and fixes</summary>
+<ul>
+<li>Control Plane: The default password encryption method for roles in Neon was changed to `scram-sha-256`.</li>
+<li>Control Plane: Upgraded PGBouncer to a Bitnami version that does not wait for the Postgres instance to become accessible before starting PgBouncer. Additionally, to optimize compute startup times, the `server_login_retry` setting in PgBouncer's configuration was adjusted to remove any delay between Postgres connection retries.</li>
+<li>API: Added a `suspend_timeout_seconds` parameter to the  `default_endpoint_settings` object in the [Create project](https://api-docs.neon.tech/reference/createproject) API. This parameter defines the amount of time before the project's default compute endpoint is suspended due to inactivity. The default is 300 seconds (5 minutes).</li>
+<li>API: Deprecated the `autoscaling_limit_min_cu` and `autoscaling_limit_min_cu` parameters in the [Create project](https://api-docs.neon.tech/reference/createproject) `project` object. You can configure these parameters in the `default_endpoint_settings` object instead when creating a project.</li>
+<li>Control Plane: Autoscaling minimum and maximum values are now validated to ensure only valid values are permitted.</li>
+<li>Invoices from past months did not appear on the **Billing** page for Neon Pro plan accounts.</li>
+</ul>
+</details>
+
