--- a/content/release-notes/2023-07-24-console.md
+++ b/content/release-notes/2023-07-24-console.md
@@ -1,6 +1,6 @@
-### Auto-suspend delay
+### Auto-suspend delay project default
 
-- Added an **Auto-suspend delay** control to the project creation dialog, enabling Neon Pro plan users to define a default **Auto-suspend delay** setting for a project's compute endpoints. The **Auto-suspend delay** setting defines the period of inactivity after which a compute endpoint is automatically suspended. For more information, see [Create a project](/docs/manage/projects#create-a-project).
+Neon now provides an **Auto-suspend delay** control on the project creation dialog, enabling Neon Pro plan users to define a default **Auto-suspend delay** setting for a project's compute endpoints. The **Auto-suspend delay** setting defines the period of inactivity after which a compute endpoint is automatically suspended. For more information, see [Create a project](/docs/manage/projects#create-a-project).
 - Updated the **Usage** widget on the Neon Dashboard for Free Tier accounts to provide additional details about the _Active time_ usage metric.
 
 <details>
