--- a/content/release-notes/2023-07-24-console.md
+++ b/content/release-notes/2023-07-24-console.md
@@ -6,6 +6,6 @@ Neon now provides an **Auto-suspend delay** control on the project creation dial
 <details>
 <summary>Improvements and fixes</summary>
 <ul>
-<li>Fixed OAuth page styling and other minor style issues for the Neon Console dark mode theme.</li>
+<li>UI: Fixed OAuth page styling and other minor style issues for the Neon Console dark mode theme.</li>
 </ul>
 </details>
