--- a/content/release-notes/2023-02-27-docs.md
+++ b/content/release-notes/2023-02-27-docs.md
@@ -1,4 +1,4 @@
-### Improvements and fixes
+### Documentation additions and updates
 
 - Added a [guide](/docs/guides/koyeb) for using Neon with [Koyeb](https://www.koyeb.com/), which is a serverless platform designed to easily deploy applications globally.
 - Added [Retool](https://retool.com/) to our list of [GUI applications and clients](/docs/connect/connect-postgres-gui#tested-gui-applications-and-ides) that support connecting to Neon.
