--- a/content/release-notes/2023-03-27-docs.md
+++ b/content/release-notes/2023-03-27-docs.md
@@ -1,4 +1,3 @@
-### Improvements and fixes
+### Documentation addition
 
-- Added a guide for connecting Neon to [PolyScale](https://www.polyscale.ai/). The PolyScale service makes data-driven apps faster by simplifying global data distribution and caching. You can connect Neon to PolyScale in minutes, providing your database-backed applications with speedy access to your Neon data from anywhere in the world. For more information, see [Connect Neon to PolyScale](/docs/guides/polyscale).
-- Added the ability to filter the Neon release notes by category. You can now select a category such as **Console**, **Storage**, or **Plans** to view the updates from Neon that you are most interested in.
+Added a guide for connecting Neon to [PolyScale](https://www.polyscale.ai/). The PolyScale service makes data-driven apps faster by simplifying global data distribution and caching. You can connect Neon to PolyScale in minutes, providing your database-backed applications with speedy access to your Neon data from anywhere in the world. For more information, see [Connect Neon to PolyScale](/docs/guides/polyscale).
