--- a/content/release-notes/2023-04-11-console.md
+++ b/content/release-notes/2023-04-11-console.md
@@ -1,21 +1,30 @@
-### Improvements and fixes
+### Configurable Auto-suspend
 
-- API: Added `consumption_period_start` and `consumption_period_end` properties to the [Get project details](https://api-docs.neon.tech/reference/getproject) API. These properties provide the date and time when Neon starts and stops measuring usage for the current billing period.
-- Control Plane: Added support for the [pg_stat_statements](https://www.postgresql.org/docs/current/pgstatstatements.html) extension, which provides tracking of plan and execution statistics for SQL statements. For more information about Postgres extensions supported by Neon, see [Postgres extensions](/docs/extensions/pg-extensions/).
-- Control Plane: Added an option to allow the Neon Control Plane to provide a compute node configuration specification in an API call after a compute node is started.
-- Integrations: Added information to the Neon Vercel Integration UI to indicate that Neon securely stores passwords. Neon stores a database user's password in a secure storage vault associated with the Neon project.
-- UI: You can now configure the period of inactivity after which a compute is automatically suspended by modifying the **Auto-suspend delay** setting for a compute endpoint. For example, you can increase the **Auto-suspend delay** setting to reduce how often a compute is suspended, or you can disable the _Auto-suspend_ feature entirely to ensure that a compute remains active. The maximum **Auto-suspend delay** setting is 86400 seconds (24-hours). A setting of 0 means use the default (5 minutes / 300 seconds), and a setting of -1 means never suspend the compute. You can access the configuration dialog by [editing a compute endpoint](/docs/manage/endpoints#edit-a-compute-endpoint).
+You can now configure the period of inactivity after which a compute is automatically suspended by modifying the **Auto-suspend delay** setting for a compute endpoint. For example, you can increase the **Auto-suspend delay** setting to reduce how often a compute is suspended, or you can disable the _Auto-suspend_ feature entirely to ensure that a compute remains active. The maximum **Auto-suspend delay** setting is 86400 seconds (24-hours). A setting of 0 means use the default (5 minutes / 300 seconds), and a setting of -1 means never suspend the compute. You can access the configuration dialog by [editing a compute endpoint](/docs/manage/endpoints#edit-a-compute-endpoint).
   ![Auto-suspend delay](/docs/relnotes/auto_suspend_delay.png)
-- UI: Added a **Storage** widget to the Neon **Dashboard** that shows current project storage size, number of branches, and data size for the primary branch. These metrics previously appeared in the **Usage** widget.
+
+### Monitor storage on the Dashboard
+
+Added a **Storage** widget to the Neon **Dashboard** that shows current project storage size, number of branches, and data size for the primary branch. These metrics previously appeared in the **Usage** widget.
   ![Storage widget](/docs/relnotes/storage_widget.png)
-- UI: Removed the previously deprecated **Pooler enabled** option from the **Edit Compute Endpoint** dialog. Connection pooling is now enabled for individual connection strings instead of compute endpoints. For more information, see [Connection pooling](/docs/connect/connection-pooling).
-- UI: The **Usage** widget in the Neon Dashboard now shows the start date for the project usage metrics shown in the widget.
-- UI: Added a link to the **Pro** badge that appears in the Neon Console for users that have upgraded to Neon's Pro plan. Clicking the badge directs you to the **Billing** page in the Neon Console.
-- UI: Added a documentation link and text to the **Roles** page in the Neon Console explaining the purpose of roles.
-- UI: Added hover help to the `PRIMARY` branch badge that identifies a branch as the primary branch for a project. The help message states that the compute endpoint associated with the primary branch remains accessible if you exceed project limits, ensuring uninterrupted access to the data on your primary branch.
 
-### Bug fixes
+### Postgres extension support
 
-- API: Project limits for shared projects are now checked against the project owner's limits. Previously, limits were checked against the project user's limits, which could prevent a Free Tier user from making full use of a project shared by a Pro plan user.
-- UI: Corrected an issue that directed users to a `Something went wrong` page after creating a branch without a compute endpoint.
-- UI: Added missing `endpoint_id` to the connection examples accessible from the **Connection Details** widget on the Neon Dashboard.
+Added support for the [pg_stat_statements](https://www.postgresql.org/docs/current/pgstatstatements.html) extension, which provides tracking of plan and execution statistics for SQL statements. For more information about Postgres extensions supported by Neon, see [Postgres extensions](/docs/extensions/pg-extensions/).
+
+<details>
+<summary><b>Improvements and fixes</b></summary>
+<ul>
+<li>API: Added `consumption_period_start` and `consumption_period_end` properties to the [Get project details](https://api-docs.neon.tech/reference/getproject) API. These properties provide the date and time when Neon starts and stops measuring usage for the current billing period.</li>
+<li>Control Plane: Added an option to allow the Neon Control Plane to provide a compute node configuration specification in an API call after a compute node is started.</li>
+<li>Integrations: Added information to the Neon Vercel Integration UI to indicate that Neon securely stores passwords. Neon stores a database user's password in a secure storage vault associated with the Neon project.</li>
+<li>UI: Removed the previously deprecated **Pooler enabled** option from the **Edit Compute Endpoint** dialog. Connection pooling is now enabled for individual connection strings instead of compute endpoints. For more information, see [Connection pooling](/docs/connect/connection-pooling).</li>
+<li>UI: The **Usage** widget in the Neon Dashboard now shows the start date for the project usage metrics shown in the widget.</li>
+<li>UI: Added a link to the **Pro** badge that appears in the Neon Console for users that have upgraded to Neon's Pro plan. Clicking the badge directs you to the **Billing** page in the Neon Console.</li>
+<li>UI: Added a documentation link and text to the **Roles** page in the Neon Console explaining the purpose of roles.</li>
+<li>UI: Added hover help to the `PRIMARY` branch badge that identifies a branch as the primary branch for a project. The help message states that the compute endpoint associated with the primary branch remains accessible if you exceed project limits, ensuring uninterrupted access to the data on your primary branch.</li>
+<li>API: Project limits for shared projects are now checked against the project owner's limits. Previously, limits were checked against the project user's limits, which could prevent a Free Tier user from making full use of a project shared by a Pro plan user.</li>
+<li>UI: Corrected an issue that directed users to a `Something went wrong` page after creating a branch without a compute endpoint.</li>
+<li>UI: Added missing `endpoint_id` to the connection examples accessible from the **Connection Details** widget on the Neon Dashboard.</li>
+</ul>
+</details>
