--- a/content/release-notes/2023-04-14-console.md
+++ b/content/release-notes/2023-04-14-console.md
@@ -1,11 +1,14 @@
-### Improvements and fixes
+### Postgres extension support
 
-- Control Plane: Added support for the [timescaledb](https://github.com/timescale/timescaledb) extension, which scales Postgres for time-series data. For more information about Postgres extensions supported by Neon, see [Postgres extensions](/docs/extensions/pg-extensions/).
-- UI: Added hover help to the `PRIMARY` branch badge that identifies a branch as the [primary branch](/docs/reference/glossary#primary-branch) for a project. The help message states that the compute endpoint associated with the primary branch remains accessible if you exceed project limits, ensuring uninterrupted access to the data on your primary branch.
+Added support for the [timescaledb](https://github.com/timescale/timescaledb) extension, which scales Postgres for time-series data. For more information about Postgres extensions supported by Neon, see [Postgres extensions](/docs/extensions/pg-extensions/).
 
-### Bug fixes
-
-- UI: Fixed the Neon **Project Creation** dialog to display a value for the **Fixed Size** compute option. A value was not displayed previously.
-- UI: Fixed the **Create Compute Endpoint** and **Edit Compute Endpoint** dialogs to enable switching between **Fixed Size** and **Autoscaling** compute options, enabling you to configure the compute size for each compute endpoint individually. For information about Neon's Autoscaling feature, see [Autoscaling](/docs/introduction/autoscaling).
-- UI: Fixed the **Edit Compute Endpoint** dialog so that the **Autoscaling** compute provisioning slider does not permit selecting unsupported minimum values. The minimum compute size for **Autoscaling** is 1 vCPU and 4 GB of RAM.
-- UI: Fixed an issue that caused text on the Neon **Dashboard** to overflow when reducing the size of the browser window.
+<details>
+<summary><b>Improvements and fixes</b></summary>
+<ul>
+<li>UI: Added hover help to the `PRIMARY` branch badge that identifies a branch as the [primary branch](/docs/reference/glossary#primary-branch) for a project. The help message states that the compute endpoint associated with the primary branch remains accessible if you exceed project limits, ensuring uninterrupted access to the data on your primary branch.</li>
+<li>UI: Fixed the Neon **Project Creation** dialog to display a value for the **Fixed Size** compute option. A value was not displayed previously.</li>
+<li>UI: Fixed the **Create Compute Endpoint** and **Edit Compute Endpoint** dialogs to enable switching between **Fixed Size** and **Autoscaling** compute options, enabling you to configure the compute size for each compute endpoint individually. For information about Neon's Autoscaling feature, see [Autoscaling](/docs/introduction/autoscaling).</li>
+<li>UI: Fixed the **Edit Compute Endpoint** dialog so that the **Autoscaling** compute provisioning slider does not permit selecting unsupported minimum values. The minimum compute size for **Autoscaling** is 1 vCPU and 4 GB of RAM.</li>
+<li>UI: Fixed an issue that caused text on the Neon **Dashboard** to overflow when reducing the size of the browser window.</li>
+</ul>
+</details>
