remove drop downs
we cannot use them consistently at this point

--- a/content/release-notes/2023-06-08-console.md
+++ b/content/release-notes/2023-06-08-console.md
@@ -6,9 +6,7 @@ Introduced a **Pro Plan Cost Estimation** tool designed to assist Free Tier user
 
 - Resolved an issue where the **Time** field on the **Branch** details page incorrectly displayed the date after creating a branch from `main` using the **Time** option. Now, the field correctly displays the time.
 
-<details>
-<summary>Improvements and fixes</summary>
-<ul>
-<li>UI: The code examples accessible from the **Connect Details** widget on the Neon **Dashboard** now include a `-pooler` suffix in the endpoint hostname when the **Pooled connection** tab is selected. You no longer need to add this suffix manually.</li>
-</ul>
-</details>
+### Improvements and fixes
+
+- UI: The code examples accessible from the **Connect Details** widget on the Neon **Dashboard** now include a `-pooler` suffix in the endpoint hostname when the **Pooled connection** tab is selected. You no longer need to add this suffix manually.
+
