--- a/content/release-notes/2023-05-19-console.md
+++ b/content/release-notes/2023-05-19-console.md
@@ -9,10 +9,7 @@ Neon's Autoscaling feature now supports fractional (1/4 and 1/2) minimum compute
 Added a **Billing** page to the Neon Console where Free Tier users can view [Free Tier](/docs/introduction/free-tier) limits and learn about the benefits of upgrading to the [Neon Pro plan](/docs/introduction/pro-plan). The **Billing** page is accessible from the sidebar in the Neon Console.
   ![Free Tier Billing page](/docs/relnotes/free_tier_billing.png)
 
-<details>
-<summary>Improvements and fixes</summary>
-<ul>
-<li>UI: Implemented minor copy, stylistic, and functional improvements for the **Request Downgrade** modal accessed from the **Billing** page.</li>
-<li>API: Disabled `docker` as a compute provisioning option in the Neon [Create project](https://api-docs.neon.tech/reference/createproject) and [Create endpoint](https://api-docs.neon.tech/reference/createprojectendpoint) APIs. This option is not supported with the Neon cloud service.</li>
-</ul>
-</details>
+### Improvements and fixes
+
+- UI: Implemented minor copy, stylistic, and functional improvements for the **Request Downgrade** modal accessed from the **Billing** page.
+- API: Disabled `docker` as a compute provisioning option in the Neon [Create project](https://api-docs.neon.tech/reference/createproject) and [Create endpoint](https://api-docs.neon.tech/reference/createprojectendpoint) APIs. This option is not supported with the Neon cloud service.
