--- a/content/release-notes/2023-04-14-docs.md
+++ b/content/release-notes/2023-04-14-docs.md
@@ -1,4 +1,4 @@
-### Documentation additions and updates
+### Documentation updates
 
 - Added documentation for Neon's newly released _Autoscaling_ feature. To learn how Neon automatically and transparently scales compute on demand, see [Autoscaling](/docs/introduction/autoscaling). Pro users can enable _Autoscaling_ when creating a Neon project or afterward by editing a compute endpoint. For instructions, see:
 
